trying fix bugs

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 </script>
 
 <!-- Dependencies -->
+<script type="text/javascript" src='./blocks/model/model.js'></script>
 <script type="text/javascript" src='./libs/tmpl.js'></script>
 <script type="text/javascript" src='./blocks/form/index.js'></script>
 <script type="text/javascript" src='./blocks/item/index.js'></script>
